--- a/dll/CPUMemoryTOP/CPUMemoryTOP.vcxproj
+++ b/dll/CPUMemoryTOP/CPUMemoryTOP.vcxproj
@@ -23,6 +23,7 @@
     <RootNamespace>CPUMemoryTOP</RootNamespace>
     <Keyword>Win32Proj</Keyword>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <ProjectName>NanomsgTOP</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
