Use main.cpp instead of CPUMemoryTOP

--- a/dll/NanomsgTOP/NanomsgTOP.vcxproj
+++ b/dll/NanomsgTOP/NanomsgTOP.vcxproj
@@ -155,7 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\CPUMemoryTOP.cpp" />
+    <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\CPlusPlus_Common.h" />
