--- a/dll/NanomsgTOP/NanomsgTOP.vcxproj.filters
+++ b/dll/NanomsgTOP/NanomsgTOP.vcxproj.filters
@@ -23,7 +23,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\CPUMemoryTOP.cpp">
+    <ClCompile Include="src\main.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
