--- a/dll/NanomsgTOP/NanomsgTOP.vcxproj
+++ b/dll/NanomsgTOP/NanomsgTOP.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{3F5BEECD-FA36-459F-91B8-BB481A67EF44}</ProjectGuid>
-    <RootNamespace>CPUMemoryTOP</RootNamespace>
+    <RootNamespace>NanomsgTOP</RootNamespace>
     <Keyword>Win32Proj</Keyword>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
     <ProjectName>NanomsgTOP</ProjectName>
